--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <div class="services">
             <a href="./katalog/katalog.html">Каталог <div class="menu"><span></span></div></a>
             <a href="./aboutUs/aboutUs.html">О нас</a>
-            <a href="">Услуги</a>
+            <a href="./services/services.html">Услуги</a>
             <a href="./contact/contact.html">Контакты</a>
             <a href="">Галерея</a>
             <a href="" ><img src="./header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
-            <a href="" class="services__media"> <img  src="./header/search.webp" alt="поиск"></a>
+            <img  class="services__media" src="../header/search.webp" alt="поиск">
             <div class="sidebar__open">
                 <span></span>
             </div>
@@ -51,7 +51,7 @@
                         <p class="sidebar__close">X</p>
                     </div>
                     <a href="./aboutUs/aboutUs.html">О нас</a>
-                    <a href="">Услуги</a>
+                    <a href="./services/services.html">Услуги</a>
                     <a href="./contact/contact.html">Контакты</a>
                     <a href="">Галерея</a>
                     <a href="" ><img src="./header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
@@ -323,7 +323,7 @@
                     <h4>Информация</h4>
                     <a href="./aboutUs/aboutUs.html">О нас</a>
                     <a href="./contact/contact.html">контакты</a>
-                    <a href="">услуги</a>
+                    <a href="./services/services.html">услуги</a>
                     <a href="">галерея</a>
                 </div>
                 <div class="d-col">
