--- a/services/services.html
+++ b/services/services.html
@@ -9,7 +9,7 @@
     <title>IdsStore Контакты</title>
     <link rel="stylesheet" href="../general.css" media="all">
     <link rel="stylesheet" href="../header/header.css" media="all">
-    <link rel="stylesheet" href="./contact.css" media="all" >
+    <link rel="stylesheet" href="./services.css" media="all" >
     <link rel="stylesheet" href="../footer/footer.css"media="all">
 </head>
 <body>
@@ -36,8 +36,8 @@
         <div class="services">
             <a href="../katalog/katalog.html">Каталог <div class="menu"><span></span></div></a>
             <a href="../aboutUs/aboutUs.html">О нас</a>
-            <a href="../services/services.html">Услуги</a>
-            <a href="./contact.html">Контакты</a>
+            <a href="./services.html">Услуги</a>
+            <a href="../contact/contact.html">Контакты</a>
             <a href="">Галерея</a>
             <a href="" ><img src="../header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
             <img  class="services__media" src="../header/search.webp" alt="поиск">
@@ -51,8 +51,8 @@
                         <p class="sidebar__close">X</p>
                     </div>
                     <a href="../aboutUs/aboutUs.html">О нас</a>
-                    <a href="../services/services.html">Услуги</a>
-                    <a href="./contact.html">Контакты</a>
+                    <a href="./services.html">Услуги</a>
+                    <a href="../contact/contact.html">Контакты</a>
                     <a href="">Галерея</a>
                     <a href="" ><img src="../header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
                 </div>
@@ -60,27 +60,65 @@
         </div>
     </header>
     <main>   
-        <div class="map">
-            <h1>Контакты</h2>
-            <div class="map__contact">
-                <div class="map-col">
-                    <h2>Телефон</h2>
-                    <p>+7 (910)973-36-65</p>
+        <div class="services__wrapper">
+            <span><a href="../index.html">главная </a>/<a href="./services.html"> услуги</a></span>      
+            <h1>Услуги</h1>
+            <div class="services">
+                <div class="services__item">
+                    <div class="services__img">
+                        <img src="./cubinsforLive.webp" alt="">
+                    </div>
+                    <div class="services__contant">
+                        <div class="star">★★★★☆</div>
+                        <p>производство и продажа бытовок</p>
+                        <div class="services__contantPrice">
+                            <a href="#" class="more">подробнее</a>
+                            <p>От 8000₽</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="map-col">
-                    <h2>Адрес</h2>
-                    <p>г. ярославль, ул 2-я Тарная 2</p>
+                <div class="services__item">
+                    <div class="services__img">
+                        <img src="./cubins.webp" alt="бытовка б/у">
+                    </div>
+                    <div class="services__contant">
+                        <div class="star">★★★☆☆</div>
+                        <p>выкуп бытовок б/у</p>
+                        <div class="services__contantPrice">
+                            <!--TODO: что нужно делать -->
+                            <a href="#" class="more">подробнее</a>
+                            <p>От 15000₽</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="map-col">
-                    <h2>Электронная почта</h2>
-                    <p>dir@ids76.ru</p>
+                <div class="services__item">
+                    <div class="services__img">
+                        <img src="./transportiration.webp" alt="перевозка бытовок">
+                    </div>
+                    <div class="services__contant">
+                        <div class="star">★★★★★</div>
+                        <p>перевозка бытовок и контейнеров</p>
+                        <div class="services__contantPrice">
+                            <a href="#" class="more">подробнее</a>
+                            <p>От 8000₽</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div id="map__yandex">
-                <script type="text/javascript" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1de37163293f4e550481d9ca14ec396e5a467508c7cd738b2b7f8c1037132ff8&amp;width=100%25&amp;height=350&amp;lang=ru_RU&amp;scroll=true"></script>
+                <div class="services__item">
+                    <div class="services__img">
+                        <img src="./cubinsForWork.webp" alt="">
+                    </div>
+                    <div class="services__contant">
+                        <div class="star">★★★★☆</div>
+                        <p>арендна бытовок</p>
+                        <div class="services__contantPrice">
+                            <a href="../katalog/katalog.html" class="more">подробнее</a>
+                            <p>От 5000₽</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        
     </main>
     <footer>
         <div class="pd-100">
@@ -164,8 +202,8 @@
                 <div class="d-col">
                     <h4>Информация</h4>
                     <a href="../aboutUs/aboutUs.html">О нас</a>
-                    <a href="./contact.html">контакты</a>
-                    <a href="../services/services.html">услуги</a>
+                    <a href="../contact/contact.html">контакты</a>
+                    <a href="./services.html">услуги</a>
                     <a href="">галерея</a>
                 </div>
                 <div class="d-col">
