--- a/katalog/katalog.html
+++ b/katalog/katalog.html
@@ -82,13 +82,13 @@
                         <p class="filter__close">x</p>
                     </div>
                     <div class="katalog-row">
-                        <span> от <input type="text" maxlength="4" value="0" class="katalog__price" oninput="inputValue()" onkeypress="noDigits(event)"></span>
+                        <span> от <input type="text" maxlength="4" value="1000" class="katalog__price" oninput="inputValue()" onkeypress="noDigits(event)"></span>
                         <span> до <input type="text" maxlength="4" value="10000" class="katalog__price" oninput="inputValue()"onkeypress="noDigits(event)" ></span>
                     </div>
                     <div class="container">
                         <div class="slider-track"></div>
-                        <input type="range" min="0" max="10000" value="0" id="slider-1">
-                        <input type="range" min="0" max="10000" value="10000" id="slider-2" oninput="slideTwo()">
+                        <input type="range" min="0" max="10000" value="1000" id="slider-1">
+                        <input type="range" min="0" max="10000" value="10000" id="slider-2">
                     </div>
                     <div class="katalog-size">
                         <h2>Габариты</h2>
@@ -97,7 +97,7 @@
                             <label for="katalog__Checkbox">6х2,4х2,50м</label>
                         </div>
                         <div class="katalog__sizeItem">
-                            <input type="checkbox" class="katalog__Checkbox" value="6х2,4х2,4м">
+                            <input type="checkbox" class="katalog__Checkbox" value="2,5х2,5х3,0м">
                             <label for="katalog__Checkbox">2,5х2,5х3,0м</label>
                         </div>
                         <div class="katalog__sizeItem">
@@ -107,11 +107,12 @@
                     </div>
                         <h2>Вместимость</h2>
                         <div class="katalog-row">
-                            <span> от <input type="text" maxlength="1" value="1" class="katalog__price" oninput="noDigits(event)" placeholder="1"></span>
+                            <span> от <input type="text" maxlength="2" value="1" class="katalog__price" oninput="noDigits(event)" placeholder="1"></span>
                             <span> до <input type="text" maxlength="2" value="10" class="katalog__price" oninput="noDigits(event)" placeholder="10"></span>
                         </div>
                     <div class="katalog-star">
                         <h2>Рейтинг покупателей</h2>
+                        <p> <input type="checkbox" class="katalog__Checkbox" value="★★★★★">★★★★★</p>
                         <p> <input type="checkbox" class="katalog__Checkbox" value="★★★★☆">★★★★☆</p>
                         <p> <input type="checkbox" class="katalog__Checkbox" value="★★★☆☆">★★★☆☆</p>
                         <p> <input type="checkbox" class="katalog__Checkbox" value="★★☆☆☆">★★☆☆☆</p>
