--- a/gallary/gallary.html
+++ b/gallary/gallary.html
@@ -9,7 +9,7 @@
     <title>IdsStore Контакты</title>
     <link rel="stylesheet" href="../general.css" media="all">
     <link rel="stylesheet" href="../header/header.css" media="all">
-    <link rel="stylesheet" href="./contact.css" media="all" >
+    <link rel="stylesheet" href="./galary.css" media="all" >
     <link rel="stylesheet" href="../footer/footer.css"media="all">
 </head>
 <body>
@@ -37,8 +37,8 @@
             <a href="../katalog/katalog.html">Каталог <div class="menu"><span></span></div></a>
             <a href="../aboutUs/aboutUs.html">О нас</a>
             <a href="../services/services.html">Услуги</a>
-            <a href="./contact.html">Контакты</a>
-            <a href="../gallary/gallary.html">Галерея</a>
+            <a href="../contact/contact.html">Контакты</a>
+            <a href="./gallary.html">Галерея</a>
             <a href="" ><img src="../header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
             <img  class="services__media" src="../header/search.webp" alt="поиск">
             <div class="sidebar__open">
@@ -52,35 +52,32 @@
                     </div>
                     <a href="../aboutUs/aboutUs.html">О нас</a>
                     <a href="../services/services.html">Услуги</a>
-                    <a href="./contact.html">Контакты</a>
-                    <a href="../gallary/gallary.html">Галерея</a>
+                    <a href="../contact/contact.html">Контакты</a>
+                    <a href="./gallary.html">Галерея</a>
                     <a href="" ><img src="../header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
                 </div>
             </div>
         </div>
     </header>
     <main>   
-        <div class="map">
-            <h1>Контакты</h2>
-            <div class="map__contact">
-                <div class="map-col">
-                    <h2>Телефон</h2>
-                    <p>+7 (910)973-36-65</p>
-                </div>
-                <div class="map-col">
-                    <h2>Адрес</h2>
-                    <p>г. ярославль, ул 2-я Тарная 2</p>
-                </div>
-                <div class="map-col">
-                    <h2>Электронная почта</h2>
-                    <p>dir@ids76.ru</p>
-                </div>
+        <div class="gallary">
+            <span><a href="../index.html">главная </a>/<a href="./gallary.html"> галерея</a></span>
+            <h1>Бытовки для проживания</h1>
+            <div class="gallary__item">
             </div>
-            <div id="map__yandex">
-                <script type="text/javascript" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1de37163293f4e550481d9ca14ec396e5a467508c7cd738b2b7f8c1037132ff8&amp;width=100%25&amp;height=350&amp;lang=ru_RU&amp;scroll=true"></script>
+            <h1>Бытовки прорабские</h1>
+            <div class="gallary__item">
+            </div>
+            <h1>Бытовки раздевалки</h1>
+            <div class="gallary__item">
+            </div>
+            <h1>Бытовки с душем</h1>
+            <div class="gallary__item">
+            </div>
+            <h1>Бытовки под склад</h1>
+            <div class="gallary__item">
             </div>
         </div>
-        
     </main>
     <footer>
         <div class="pd-100">
@@ -164,9 +161,9 @@
                 <div class="d-col">
                     <h4>Информация</h4>
                     <a href="../aboutUs/aboutUs.html">О нас</a>
-                    <a href="./contact.html">контакты</a>
+                    <a href="../contact/contact.html">контакты</a>
                     <a href="../services/services.html">услуги</a>
-                    <a href="../gallary/gallary.html">галерея</a>
+                    <a href="./gallary.html">галерея</a>
                 </div>
                 <div class="d-col">
                     <h4>Контакты</h4>
@@ -178,6 +175,7 @@
             </div>
         </div>
     </footer>
+    <script src="./gallary.js"></script>
     <script src="../main.js"></script>
 </body>
 </html>
