--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="./aboutUs/aboutUs.html">О нас</a>
             <a href="./services/services.html">Услуги</a>
             <a href="./contact/contact.html">Контакты</a>
-            <a href="">Галерея</a>
+            <a href="./gallary/gallary.html">Галерея</a>
             <a href="" ><img src="./header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
             <img  class="services__media" src="../header/search.webp" alt="поиск">
             <div class="sidebar__open">
@@ -53,7 +53,7 @@
                     <a href="./aboutUs/aboutUs.html">О нас</a>
                     <a href="./services/services.html">Услуги</a>
                     <a href="./contact/contact.html">Контакты</a>
-                    <a href="">Галерея</a>
+                    <a href="./gallary/gallary.html">Галерея</a>
                     <a href="" ><img src="./header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
                 </div>
             </div>
@@ -74,8 +74,8 @@
                                 <p>Аренда бытовок от 5000руб</p>
                             </div>
                             <div class="slide__button">
-                                <a href="" class="more">подробнее</a>
-                                <a href=""><div class="block"></div></a>
+                                <a href="./cubinsForlive/cubinsForlive.html" class="more">подробнее</a>
+                                <a href="#"><div class="block"></div></a>
                             </div>
                         </div>
                         <div class="slide__radius">
@@ -89,8 +89,8 @@
                                 <p>доствка по всей россии</p>
                             </div>
                             <div class="slide__button">
-                                <a href="" class="more">подробнее</a>
-                                <a href=""><div class="block"></div></a>
+                                <a href="./cubinsForwarehouse/cubinsForwarehouse.html" class="more">подробнее</a>
+                                <a href="#"><div class="block"></div></a>
                             </div>
                         </div>
                         <div class="slide__radius">
@@ -104,8 +104,8 @@
                                 <p>лучшие бытовки</p>
                             </div>
                             <div class="slide__button">
-                                <a href="" class="more">подробнее</a>
-                                <a href=""><div class="block"></div></a>
+                                <a href="./cubinsForbath/cubinsForbath.html" class="more">подробнее</a>
+                                <a href="#"><div class="block"></div></a>
                             </div>
                         </div>
                         <div class="slide__radius">
@@ -119,8 +119,8 @@
                                 <p>Аренда бытовок от 5000руб</p>
                             </div>
                             <div class="slide__button">
-                                <a href="" class="more">подробнее</a>
-                                <a href=""><div class="block"></div></a>
+                                <a href="./cubinsForwork/cubinsForwork.html" class="more">подробнее</a>
+                                <a href="#"><div class="block"></div></a>
                             </div>
                         </div>
                         <div class="slide__radius">
@@ -141,7 +141,7 @@
                     <label for="r4" class="navigation__bar"></label>
                 </div>
             </div>
-            <a href="" class="card">
+            <a href="./cubinsfordress/cubinsfordress.html" class="card">
                 <div class="fd-row">
                     <p class="star">★★★★☆</p>
                     <p class="card__arrow">→</p>
@@ -196,8 +196,8 @@
                     <option value="./main/cubinsForBath.webp"> бытовка с душем</option>
                 </select>
                 <div class="fd-row">
-                    <a href="" class="content__Youtube"><div class="block1"></div></a>
-                    <a href=""> <p class="content__text">Наш Youtube канал</p></a>
+                    <a href="#" class="content__Youtube"><div class="block1"></div></a>
+                    <a href="#"> <p class="content__text">Наш Youtube канал</p></a>
                 </div>
             </div>
             <div class="choose">
@@ -306,32 +306,32 @@
                         <span>Магазин бытовок</span>
                     </a>
                     <div class="block">
-                        <a href="" class="prava">2022 все права защищены</a>
-                        <a href="" class="prava">пользовательское соглашение</a>
-                        <a href="" class="prava">политика конфидециальности</a>
+                        <a href="#" class="prava">2022 все права защищены</a>
+                        <a href="#" class="prava">пользовательское соглашение</a>
+                        <a href="#" class="prava">политика конфидециальности</a>
                     </div>
                 </div>
                 <div class="d-col">
                     <h4>Каталог</h4>
-                    <a href="">Бытовки для проживания</a>
-                    <a href="">Бытовки раздевалки</a>
-                    <a href="">Бытовки прорабские</a>
-                    <a href="">Бытовки под склад</a>
-                    <a href="">Бытовки с душем</a>
+                    <a href="./cubinsForlive/cubinsForlive.html">Бытовки для проживания</a>
+                    <a href="./cubinsfordress/cubinsfordress.html">Бытовки раздевалки</a>
+                    <a href="./cubinsForwork/cubinsForwork.html">Бытовки прорабские</a>
+                    <a href="./cubinsForwarehouse/cubinsForwarehouse.html">Бытовки под склад</a>
+                    <a href="./cubinsForbath/cubinsForbath.html">Бытовки с душем</a>
                 </div>
                 <div class="d-col">
                     <h4>Информация</h4>
                     <a href="./aboutUs/aboutUs.html">О нас</a>
                     <a href="./contact/contact.html">контакты</a>
                     <a href="./services/services.html">услуги</a>
-                    <a href="">галерея</a>
+                    <a href="./gallary/gallary.html">галерея</a>
                 </div>
                 <div class="d-col">
                     <h4>Контакты</h4>
                     <p>+7 (910)973-36-65</p>
                     <p>	dir@ids76.ru</p>
                     <p>г. ярославль, ул 2-я Тарная 2</p>
-                    <a href=""><img src="./footer/vkontakte-5.webp" alt="Vkontakte"></a>
+                    <a href="#"><img src="./footer/vkontakte-5.webp" alt="Vkontakte"></a>
                 </div>
             </div>
         </div>
