--- a/cubinsForwarehouse/cubinsForwarehouse.html
+++ b/cubinsForwarehouse/cubinsForwarehouse.html
@@ -22,6 +22,14 @@
             <div class="headerTop__search">
                 <input type="text" placeholder="Поиск" maxlength="30" id="search">
                 <img src="../header/search.webp" alt="поиск">
+                <div id="search__block">
+                    <a class="search__blockHref" href="../cubinsForlive/cubinsForlive.html">Бытовки для проживания</a>
+                    <a class="search__blockHref" href="../cubinsfordress/cubinsfordress.html">Бытовки раздевалки</a>
+                    <a class="search__blockHref" href="../cubinsForwork/cubinsForwork.html">Бытовки прорабские</a>
+                    <a class="search__blockHref" href="../cubinsForwarehouse/cubinsForwarehouse.html">Бытовки под склад</a>
+                    <a class="search__blockHref" href="../cubinsForbath/cubinsForbath.html">Бытовки с душем</a>
+                    <a class="search__blockHref" href="../transportation/transportation.html">Перевозка бытовок и контейнеров</a>
+                </div>
             </div>
             <div class="headerTop__contacts">
                <p>+7(910)973-36-65</p>
