--- a/contact/contact.html
+++ b/contact/contact.html
@@ -13,6 +13,21 @@
     <link rel="stylesheet" href="../footer/footer.css"media="all">
 </head>
 <body>
+    <div class="search__modal">
+        <div class="search__header">
+            <input type="text" placeholder="Поиск" maxlength="30"  class="search">
+            <img src="../header/search.svg" alt="поиск">
+            <p class="search__close" >Отмена</p>
+        </div>
+        <div class="search__block">
+            <a class="search__blockHref" href="../cubinsForlive/cubinsForlive.html">Бытовки для проживания</a>
+            <a class="search__blockHref" href="../cubinsfordress/cubinsfordress.html">Бытовки раздевалки</a>
+            <a class="search__blockHref" href="../cubinsForwork/cubinsForwork.html">Бытовки прорабские</a>
+            <a class="search__blockHref" href="../cubinsForwarehouse/cubinsForwarehouse.html">Бытовки под склад</a>
+            <a class="search__blockHref" href="../cubinsForbath/cubinsForbath.html">Бытовки с душем</a>
+            <a class="search__blockHref" href="../transportation/transportation.html">Перевозка бытовок и контейнеров</a>
+        </div>
+    </div>
     <header>
         <div class="headerTop">
             <a href="../index.html" class="headerTop__logo">
@@ -20,9 +35,9 @@
                 <span>Магазин бытовок</span>
             </a>
             <div class="headerTop__search">
-                <input type="text" placeholder="Поиск" maxlength="30" id="search">
-                <img src="../header/search.webp" alt="поиск">
-                <div id="search__block">
+                <input type="text" placeholder="Поиск" maxlength="30" class="search">
+                <img src="../header/search.svg" alt="поиск">
+                <div class="search__block">
                     <a class="search__blockHref" href="../cubinsForlive/cubinsForlive.html">Бытовки для проживания</a>
                     <a class="search__blockHref" href="../cubinsfordress/cubinsfordress.html">Бытовки раздевалки</a>
                     <a class="search__blockHref" href="../cubinsForwork/cubinsForwork.html">Бытовки прорабские</a>
@@ -47,8 +62,8 @@
             <a href="../services/services.html">Услуги</a>
             <a href="./contact.html">Контакты</a>
             <a href="../gallary/gallary.html">Галерея</a>
-            <a href="" ><img src="../header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
-            <img  class="services__media" src="../header/search.webp" alt="поиск">
+            <a href="" ><img src="../header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
+            <img  class="services__media" src="../header/search.svg" alt="поиск">
             <div class="sidebar__open">
                 <span></span>
             </div>
@@ -62,7 +77,7 @@
                     <a href="../services/services.html">Услуги</a>
                     <a href="./contact.html">Контакты</a>
                     <a href="../gallary/gallary.html">Галерея</a>
-                    <a href="" ><img src="../header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
+                    <a href="" ><img src="../header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
                 </div>
             </div>
         </div>
